--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,4 +57,4 @@ steps:
     azureSubscription: 'Pay-As-You-Go(1)(c7a8da78-e630-465a-9166-347c7d4150ac)'
     scriptType: 'bash'
     scriptLocation: 'scriptPath'
-    scriptPath: '/aci/logs/deploy-aci.yaml'
+    scriptPath: './temp/deploy-aci.yaml'
