--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,5 +57,5 @@ steps:
   inputs:
     azureSubscription: 'Pay-As-You-Go(1)(c7a8da78-e630-465a-9166-347c7d4150ac)'
     scriptType: 'bash'
-    scriptLocation: 'inlineScript'
+    scriptLocation: 'ScriptPath'
     scriptPath: '/home/vsts/work/1/s/temp/deploy-aci.yaml'
