--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,7 +58,17 @@ steps:
     cat temp/deploy-aci.yaml
 - task: AzureCLI@2
   inputs:
-    azureSubscription: 'Pay-As-You-Go(1)(c7a8da78-e630-465a-9166-347c7d4150ac)'
-    scriptType: 'bash'
-    scriptLocation: 'ScriptPath'
-    scriptPath: '/home/vsts/work/1/s/temp/deploy-aci.yaml'
+    azureSubscription: 'Pay-As-You-Go(c7a8da78-e630-465a-9166-347c7d4150ac)'
+    scriptType: 'ps'
+    scriptLocation: 'inlineScript'
+    inlineScript: |
+      az container create \
+          --resource-group ADOProject_group \
+          --name parabank-baseline \
+          --image lavanya93/parabank-baseline:2022 \
+          --dns-name-label devparasoftcom \
+          --ports 8080 4040\
+          --azure-file-volume-account-name adoproject \
+          --azure-file-volume-account-key liZ+KvFZBAgxHMDkb8z7MdV9NPFfma0M0EjtgFLG2Yk2InBwwkJXjGfpe5r6Ljexn8XKOnif1rrg+AStdt6c/w== \
+          --azure-file-volume-share-name parasoftfiles \
+          --azure-file-volume-mount-path /aci/logs/
