--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,6 +56,7 @@ steps:
     ls -R
     echo -e "\nDebug -- Verify deploy-aci.yaml file contents."
     cat temp/deploy-aci.yaml
+    ls -R $(pwd)/temp
 - task: AzureCLI@2
   inputs:
     azureSubscription: 'Pay-As-You-Go(c7a8da78-e630-465a-9166-347c7d4150ac)'
